<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_700"
    android:gravity="center"

    tools:context=".MainActivity">
  <ImageView
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:background="@drawable/roundedimage"
      android:src="@drawable/profilepicturelogo"
      android:scaleType="centerCrop"
      android:clipToOutline="true"
      android:id="@+id/ivImage"
      >

  </ImageView>




  <Button
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_marginStart="15dp"
      android:layout_marginEnd="15dp"
      android:backgroundTint="@color/btnBackground"
      android:id="@+id/btnProfilePic"
      android:text="@string/profilePic"
      android:textColor="@color/btnTextColor"
      android:textSize="18sp"
      android:textStyle="bold"
      >
  </Button>
  <Button
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_marginStart="15dp"
      android:layout_marginEnd="15dp"
      android:backgroundTint="@color/btnBackground"
      android:layout_marginTop="15dp"
      android:id="@+id/btnPersonalDetails"
      android:text="@string/personDet"
      android:textColor="@color/btnTextColor"
      android:textSize="18sp"
      android:textStyle="bold"
      >

  </Button>
  <Button
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_marginStart="15dp"
      android:layout_marginEnd="15dp"
      android:backgroundTint="@color/btnBackground"
      android:layout_marginTop="15dp"
      android:id="@+id/btnSummary"
      android:text="@string/summary"
      android:textColor="@color/btnTextColor"
      android:textSize="18sp"
      android:textStyle="bold"
      >

  </Button>
  <Button
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_marginStart="15dp"
      android:layout_marginEnd="15dp"
      android:backgroundTint="@color/btnBackground"
      android:layout_marginTop="15dp"
      android:id="@+id/btnEducation"
      android:text="@string/education"
      android:textColor="@color/btnTextColor"
      android:textSize="18sp"
      android:textStyle="bold"
      >

  </Button>
  <Button
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_marginStart="15dp"
      android:layout_marginEnd="15dp"
      android:backgroundTint="@color/btnBackground"
      android:layout_marginTop="15dp"
      android:id="@+id/btnExperience"
      android:text="@string/experience"
      android:textColor="@color/btnTextColor"
      android:textSize="18sp"
      android:textStyle="bold"
      >

  </Button>
  <Button
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_marginStart="15dp"
      android:layout_marginEnd="15dp"
      android:backgroundTint="@color/btnBackground"
      android:layout_marginTop="15dp"
      android:id="@+id/btnCertifications"
      android:text="@string/certifications"
      android:textColor="@color/btnTextColor"
      android:textSize="18sp"
      android:textStyle="bold"
      >

  </Button>
  <Button
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_marginStart="15dp"
      android:layout_marginEnd="15dp"
      android:backgroundTint="@color/btnBackground"
      android:layout_marginTop="15dp"
      android:id="@+id/btnReferences"
      android:text="@string/references"
      android:textColor="@color/btnTextColor"
      android:textSize="18sp"
      android:textStyle="bold"
      >

  </Button>
  <Button
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_marginStart="15dp"
      android:layout_marginEnd="15dp"
      android:backgroundTint="@color/teal_200"
      android:layout_marginTop="15dp"
      android:id="@+id/btnPreview"
      android:text="Preview CV"
      android:textColor="@color/btnTextColor"
      android:textSize="18sp"
      android:textStyle="bold"
      >

  </Button>

  </LinearLayout>